// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`form - PhoneInputField > should be disabled when disabled prop is true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="phone-_r_18_"
        >
          Phone Number
        </label>
        <div
          class="uv_y109lc4 uv_y109lc1"
          data-disabled="true"
          data-error="false"
        >
          <div
            class="uv_y109lc0 uv_xf61n40 uv_xf61n4d uv_xf61n42d"
            data-disabled="true"
          >
            🇫🇷
          </div>
          <input
            aria-invalid="false"
            class="uv_y109lc5"
            data-size="large"
            disabled=""
            id="phone-_r_18_"
            maxlength="20"
            name="phone"
            placeholder="+33 6 12 34 56 78"
            type="tel"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`form - PhoneInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="phone-_r_0_"
        >
          Phone Number
        </label>
        <div
          class="uv_y109lc4 uv_y109lc1"
          data-disabled="false"
          data-error="false"
        >
          <div
            class="uv_y109lc0 uv_xf61n40 uv_xf61n4d uv_xf61n42d"
            data-disabled="false"
          >
            🇫🇷
          </div>
          <input
            aria-invalid="false"
            class="uv_y109lc5"
            data-size="large"
            id="phone-_r_0_"
            maxlength="20"
            name="phone"
            placeholder="+33 6 12 34 56 78"
            type="tel"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`form - PhoneInputField > should work with default country 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="phone-_r_i_"
        >
          Phone Number
        </label>
        <div
          class="uv_y109lc4 uv_y109lc1"
          data-disabled="false"
          data-error="false"
        >
          <div
            class="uv_y109lc0 uv_xf61n40 uv_xf61n4d uv_xf61n42d"
            data-disabled="false"
          >
            🇺🇸
          </div>
          <input
            aria-invalid="false"
            class="uv_y109lc5"
            data-size="large"
            id="phone-_r_i_"
            maxlength="20"
            name="phone"
            placeholder="+1 201-555-0123"
            type="tel"
            value="+1 202-555-1234"
          />
        </div>
      </div>
      <button
        class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
